added dbcontext and data seeding

--- a/src/ui/app.development.json
+++ b/src/ui/app.development.json
@@ -1,3 +1,6 @@
 {
-    "author": "squawk!"
+    "author": "squawk!",
+    "data": {
+        "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ToucanDev;Trusted_Connection=True;"
+    }
 }
