--- a/src/data/project.json
+++ b/src/data/project.json
@@ -4,19 +4,29 @@
     "debugType": "portable",
     "outputName": "Toucan.Data"
   },
-  "dependencies": {},
+  "dependencies": {
+    "Microsoft.EntityFrameworkCore": "1.1.0",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Tools": {
+      "version": "1.1.0-preview4-final",
+      "type": "build"
+    },
+    "StructureMap.Microsoft.DependencyInjection": "1.2.0",
+    "common": {
+      "target": "project"
+    },
+    "contract": {
+      "target": "project"
+    }
+  },
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
-        "NETStandard.Library": "1.6.1",
-        "StructureMap.Microsoft.DependencyInjection": "1.2.0",
-        "common": {
-          "target": "project"
-        },
-        "contract": {
-          "target": "project"
-        }
+        "NETStandard.Library": "1.6.1"
       }
     }
+  },
+  "tools": {
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final"
   }
 }
