--- a/src/ui/.gitignore
+++ b/src/ui/.gitignore
@@ -2,4 +2,6 @@ node_modules
 build
 *.log
 .webpack_build_cache
-
+src/**/*.js
+!node_modules/vue/types/*.d.ts
+!node_modules/vue-router/types/*.d.ts
