--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
     "browser-sync": "^2.13.0",
@@ -47,8 +48,13 @@
     "sass-loader": "^4.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.1.4",
+    "typings": "^2.0.0",
     "url-loader": "^0.5.7",
+    "vue": "^2.1.6",
     "vue-html-loader": "^1.2.3",
+    "vue-router": "^2.1.1",
     "webpack": "^1.13.1",
     "webpack-build": "^1.0.1",
     "webpack-cleanup-plugin": "^0.2.0",
