--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -53,6 +53,7 @@
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
     "vue": "^2.1.6",
+    "vue-class-component": "^4.4.0",
     "vue-html-loader": "^1.2.3",
     "vue-router": "^2.1.1",
     "webpack": "^1.13.1",
