moved migration and seed to seperate assembly
storing these in a different assembly makes it easier to swap out db providers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "**/.DS_Store": true,
         "**/node_modules": true,
         "**/bin": true,
-        "**/obj": true   
+        "**/obj": true,
+        "**/*.Designer.cs": true,
+        "**/*.lock.json": true
     }
 }
