--- a/src/server/project.json
+++ b/src/server/project.json
@@ -27,6 +27,9 @@
     "data": {
       "target": "project"
     },
+    "migration": {
+      "target": "project"
+    },
     "service": {
       "target": "project"
     }
