added local authentication provider
issues and validates jwt
api server supports using tokens via request headers or cookies

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,16 @@
             "problemMatcher": "$msCompile"
         },
         {
+            "taskName": "test",
+            "args": [
+                "dotnet",
+                "test",
+                "${workspaceRoot}/test/common.tests"
+            ],
+            "isTestCommand": true,
+            "problemMatcher": "$msCompile"
+        },
+        {
             "taskName": "dev build ui",
             "args": [
                 "webpack",
