--- a/src/contract/project.json
+++ b/src/contract/project.json
@@ -4,7 +4,9 @@
     "debugType": "portable",
     "outputName": "Toucan.Contract"
   },
-  "dependencies": {},
+  "dependencies": {
+    "System.Security.Claims": "4.3.0"
+  },
   "frameworks": {
     "netstandard1.6": {
       "dependencies": {
