added exception and result filters for api

--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -1,7 +1,7 @@
 {
     "webroot": ".\\wwwroot",
     "data": {
-        "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ToucanTest;Trusted_Connection=True;"
+        "connectionString": "Server=.;Database=ToucanTest;Trusted_Connection=True;"
     },
     "service": {
         "tokenProvider": {
