added signup functionality

--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
+    "axios": "^0.15.3",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
