--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0-alpha.5",
     "font-awesome": "^4.7.0",
     "vue": "^2.0.5",
+    "vue-i18n": "^4.10.0",
     "vue-router": "^2.0.1",
     "vuelidate": "^0.2.0"
   },
