--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -48,6 +48,7 @@
     "prerender-spa-plugin": "^1.1.0",
     "require-dir": "^0.3.0",
     "sass-loader": "^4.0.0",
+    "script-loader": "^0.7.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^1.3.3",
