--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -60,6 +60,8 @@
     "vue-class-component": "^4.4.0",
     "vue-html-loader": "^1.2.3",
     "vue-router": "^2.1.1",
+    "vuex": "^2.1.2",
+    "vuex-class": "^0.1.3",
     "webpack": "^1.13.1",
     "webpack-build": "^1.0.1",
     "webpack-cleanup-plugin": "^0.2.0",
