fix client-side authorization checks when location changes occur

--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -16,6 +16,7 @@
             }
         ],
         "tokenProvider": {
+            "tokenExpiration": "5",
             "tokenSecurityKey": "heartyingsquawkingisrequiredofaparrotmateys",
             "tokenSecurityAlgorithm": "HS256",
             "tokenIssuer": "localhost",
