--- a/src/server/project.json
+++ b/src/server/project.json
@@ -23,6 +23,7 @@
       "version": "1.1.0-preview4-final",
       "type": "build"
     },
+    "Microsoft.Extensions.Caching.Memory": "1.1.0",
     "Microsoft.Extensions.Configuration": "1.1.0",
     "Microsoft.Extensions.Configuration.Binder": "1.1.0",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
