--- a/src/server/project.json
+++ b/src/server/project.json
@@ -35,6 +35,7 @@
     "Microsoft.IdentityModel.Tokens": "5.1.0",
     "StructureMap.Microsoft.DependencyInjection": "1.2.0",
     "System.IdentityModel.Tokens.Jwt": "5.1.0",
+    "System.Reflection": "4.3.0",
     "common": {
       "target": "project"
     },
