--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -1,6 +1,6 @@
 {
     "data": {
-        "connectionString": "Server=.;Database=ToucanTest;Trusted_Connection=True;"
+        "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ToucanTest;Trusted_Connection=True;"
     },
     "server": {
         "webroot": ".\\wwwroot",
