--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -20,6 +20,12 @@
                 "profileUri": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token={0}",
                 "providerId": "GOOGLE",
                 "revokeUri": "https://accounts.google.com/o/oauth2/revoke?token={0}"
+            },
+            {
+                "clientId": "56d7559c-2488-4ee2-9f4d-5bb2aa8b3b58",
+                "profileUri": "",
+                "providerId": "MICROSOFT",
+                "revokeUri": ""
             }
         ],
         "tokenProvider": {
