--- a/src/server/app.production.json
+++ b/src/server/app.production.json
@@ -1,6 +1,6 @@
 {
     "data": {
-        "connectionString": "Server=(localdb)\\mssqllocaldb;Database=Toucan;Trusted_Connection=True;"
+        "connectionString": ""
     },
     "server": {
         "webroot": ".\\wwwroot",
@@ -9,7 +9,39 @@
         ],
         "antiForgery": {
             "cookieName": "XSRF-COOKIE",
-            "headerName": "X-XSRF-TOKEN"
+            "headerName": "X-XSRF-TOKEN",
+            "clientName": "XSRF-TOKEN"
+        }
+    },
+    "service": {
+        "authenticationProviders": [
+            {
+                "clientId": "",
+                "profileUri": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token={0}",
+                "providerId": "GOOGLE",
+                "revokeUri": "https://accounts.google.com/o/oauth2/revoke?token={0}"
+            },
+            {
+                "clientId": "",
+                "profileUri": "",
+                "providerId": "MICROSOFT",
+                "revokeUri": ""
+            }
+        ],
+        "tokenProvider": {
+            "tokenExpiration": "5",
+            "tokenSecurityKey": "",
+            "tokenSecurityAlgorithm": "HS256",
+            "tokenIssuer": "",
+            "tokenAudience": ""
+        }
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Verbose",
+            "System": "Information",
+            "Microsoft": "Information"
         }
     }
 }
