--- a/src/server/app.staging.json
+++ b/src/server/app.staging.json
@@ -1,6 +1,47 @@
 {
-    "webroot": ".\\wwwroot",
     "data": {
-        "connectionString": "Server=(localdb)\\mssqllocaldb;Database=ToucanStaging;Trusted_Connection=True;"
+        "connectionString": ""
+    },
+    "server": {
+        "webroot": ".\\wwwroot",
+        "areas": [
+            "admin"
+        ],
+        "antiForgery": {
+            "cookieName": "XSRF-COOKIE",
+            "headerName": "X-XSRF-TOKEN",
+            "clientName": "XSRF-TOKEN"
+        }
+    },
+    "service": {
+        "authenticationProviders": [
+            {
+                "clientId": "",
+                "profileUri": "https://www.googleapis.com/oauth2/v3/tokeninfo?access_token={0}",
+                "providerId": "GOOGLE",
+                "revokeUri": "https://accounts.google.com/o/oauth2/revoke?token={0}"
+            },
+            {
+                "clientId": "",
+                "profileUri": "",
+                "providerId": "MICROSOFT",
+                "revokeUri": ""
+            }
+        ],
+        "tokenProvider": {
+            "tokenExpiration": "5",
+            "tokenSecurityKey": "",
+            "tokenSecurityAlgorithm": "HS256",
+            "tokenIssuer": "",
+            "tokenAudience": ""
+        }
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Verbose",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
     }
 }
