--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -1,16 +1,16 @@
 {
   "name": "toucan.ui",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "UI project for Toucan template",
   "keywords": [
-    "vuejs2",
-    "vuex2",
-    "vue-router2",
-    "typescript2",
+    "vuejs",
+    "vuex",
+    "vue-router",
+    "typescript",
     "dotnetcore",
     "c-sharp",
     "structuremap",
-    "oauth2-client",
+    "oauth",
     "axios"
   ],
   "author": "mrellipse",
@@ -28,23 +28,25 @@
     "bootstrap": "^4.0.0-alpha.6",
     "client-oauth2": "^3.4.1",
     "font-awesome": "^4.7.0",
-    "vue": "^2.0.5",
-    "vue-i18n": "^4.10.0",
-    "vue-router": "^2.2.0",
-    "vuelidate": "^0.2.0"
+    "vue": "^2.2.6",
+    "vue-class-component": "^5.0.1",
+    "vue-router": "^2.3.1",
+    "vuex": "^2.2.1",
+    "vuex-class": "^0.1.3",
+    "vue-i18n": "^5.0.3",
+    "vuelidate": "^0.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
-    "axios": "^0.15.3",
-    "babel-core": "^6.10.4",
+    "axios": "^0.16.0",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-polyfill": "^6.20.0",
+    "babel-preset-env": "^1.3.3",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.11.0",
-    "browser-sync": "^2.13.0",
-    "browser-sync-webpack-plugin": "^1.1.0",
+    "babel-preset-es2016": "^6.24.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-friendly-formatter": "^2.0.5",
@@ -52,8 +54,9 @@
     "eslint-plugin-html": "^1.5.1",
     "eslint-plugin-import": "^1.10.2",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.6.5",
     "jwt-decode": "^2.1.0",
     "node-sass": "^3.8.0",
@@ -64,20 +67,16 @@
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "ts-loader": "^1.3.3",
+    "ts-loader": "^2.0.0",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
     "url-loader": "^0.5.7",
-    "vue": "^2.1.6",
-    "vue-class-component": "^4.4.0",
     "vue-html-loader": "^1.2.3",
-    "vue-router": "^2.1.1",
-    "vuex": "^2.1.2",
-    "vuex-class": "^0.1.3",
-    "webpack": "^1.13.1",
+    "webpack": "^2.3.3",
     "webpack-build": "^1.0.1",
     "webpack-cleanup-plugin": "^0.2.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "webpack-fail-plugin": "^1.0.4",
+    "webpack-merge": "^0.14.0",
+    "webpack-notifier": "^1.2.1"
   }
 }
