upgraded to .NET Core SDK 1.0.1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
         "**/obj": true,
         "**/*.Designer.cs": true,
         "**/*.lock.json": true
-    }
+    },
+    "terminal.integrated.setLocaleVariables": true
 }
