fix : production build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
         "**/bin": true,
         "**/obj": true,
         "**/*.Designer.cs": true,
-        "**/*.lock.json": true
+        "**/*.lock.json": true,
+        "dist/*.dll": true,
+        "dist/*.pdb": true
     },
     "terminal.integrated.setLocaleVariables": true
 }
