--- a/src/data/data.csproj
+++ b/src/data/data.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Toucan.Data</AssemblyName>
     <PackageId>data</PackageId>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
+    <RuntimeIdentifiers>debian.8-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
