--- a/src/common/common.csproj
+++ b/src/common/common.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Toucan.Common</AssemblyName>
     <PackageId>common</PackageId>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
+    <RuntimeIdentifiers>debian.8-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
