--- a/src/contract/contract.csproj
+++ b/src/contract/contract.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>Toucan.Contract</AssemblyName>
     <PackageId>contract</PackageId>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
+    <RuntimeIdentifiers>debian.8-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
