--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -1,6 +1,6 @@
 {
     "data": {
-        "connectionString": "",
+        "connectionString": "Host=localhost;Port=5432;Database=Toucan;Username=postgres;Password=P@ssw0rd",
         "hostKey": "TOUCAN_DBHOST",
         "hostPattern": "(?<=Host=)([^;]+)"
     },
