upgraded to .NET Core 2.0.
- updated anti-forgery configuration
- updated authorization token and cookie configuration
- minor configuration file changes
- removed 'out of the box' support for https
- updated client code (api endpoints dynamically resolved relative to current url)

--- a/src/server/app.development.json
+++ b/src/server/app.development.json
@@ -1,6 +1,14 @@
 {
     "data": {
-        "connectionString": "Server=.;Database=ToucanTest;Trusted_Connection=True;"
+        "connectionString": ""
+    },
+    "kestrel": {
+        "endpoints": {
+            "localhost": {
+                "address": "localhost",
+                "port": 5000
+            }
+        }
     },
     "server": {
         "webroot": ".\\wwwroot",
