--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,18 +21,15 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "dev build",
-            "program": "${workspaceRoot}/src/server/bin/Debug/netcoreapp1.1/Toucan.UI.dll",
+            "program": "${workspaceRoot}/src/server/bin/Debug/netcoreapp2.0/Toucan.UI.dll",
             "args": [],
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "development"
+            },
             "cwd": "${workspaceRoot}/src/server",
             "externalConsole": false,
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command.pickProcess}"
         }
     ]
 }
