fix : allow xsrf cookies to be sent over non-secure connections

--- a/src/server/app.production.json
+++ b/src/server/app.production.json
@@ -18,7 +18,8 @@
         "antiForgery": {
             "cookieName": "XSRF-COOKIE",
             "headerName": "X-XSRF-TOKEN",
-            "clientName": "XSRF-TOKEN"
+            "clientName": "XSRF-TOKEN",
+            "requireSsl": true
         }
     },
     "service": {
